Fix record name align left
- align mobile

--- a/core/app/shell/src/themes/suite8/css/layout/_navbar.scss
+++ b/core/app/shell/src/themes/suite8/css/layout/_navbar.scss
@@ -71,6 +71,7 @@ a.home-nav-link {
   color: $white;
   line-height: 3.1em;
   padding: 0.8em 1em 1em 1em;
+  padding-left: 0.5em;
 }
 
 .nav-item.active .home-nav-link svg {
